--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/analytics": "^0.10.12",
+    "@firebase/performance": "^0.7.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
+    "@testing-library/user-event": "14.6.1",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "browser-image-compression": "^2.0.2",
@@ -18,8 +20,8 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "5.8.2",
+    "web-vitals": "4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,5 +49,10 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(web-vitals|firebase|@firebase)/)"
+    ]
   }
 }
