--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,16 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .idea
 .firebase
+.npmrc
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
